# pythonfloripa

./: .gitignore  Dockerfile  docker-compose.yaml  events.json  init.sh  migrations.sh  pyproject.toml  scrapper.py
.github/workflows/: ci.yaml  deploy.yaml  scrapper.yaml
migrations/: env.py
migrations/versions/: 59a6c2690490_user_table.py  931d6e42a48b_speaker_table.py  93e90425d93e_talk_table.py  da5bff55b3e5_event_table.py
src/: app.py  settings.py  utils.py
src/ext/database/: db.py
src/resources/: __init__.py
src/resources/events/: model.py  repository.py  router.py  schema.py
src/resources/shared/: schemas.py
src/resources/speakers/: model.py  repository.py  router.py  schema.py
src/resources/talks/: model.py  repository.py  router.py  schema.py
src/resources/users/: model.py  repository.py  router.py  schema.py
tests/: conftest.py  test_app.py  test_database.py
tests/integration/: test_events_api.py  test_speakers_api.py  test_talks_api.py  test_users_api.py
