[project]
name = "pythonfloripa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.15.2,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi[standard]>=0.115.12,<0.120.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "python-ulid>=3.0.0,<4.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "uvicorn>=0.34.2,<1.0.0",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "ignr>=2.2,<3.0",
    "pytest>=8.3.5,<9.0",
    "pytest-anyio>=0.0.0,<1.0",
    "pytest-asyncio>=0.26.0,<1.0",
    "pytest-cov>=6.1.1,<7.0",
    "ruff>=0.11.10,<1.0",
    "taskipy>=1.14.1,<2.0",
    "testcontainers[postgres]>=4.10.0,<5.0",
]

[project.optional-dependencies]
scraper = [
    "rich>=14.0.0,<15.0",
    "playwright>=1.52.0,<2.0",
    "beautifulsoup4>=4.13.4,<5.0",
]


[tool.ruff]
line-length = 120
exclude = ["migrations"]


[tool.ruff.lint]
preview = true
ignore = ['PLR6301']
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
dev = 'fastapi dev src/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src'
post_test = 'coverage html'
run = 'fastapi run src/app.py'
make_migrations = 'alembic revision --autogenerate -m'
migrate = 'alembic upgrade head'
downgrade = 'alembic downgrade -1'
